--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -6,4 +6,96 @@
     android:layout_height="match_parent"
     tools:context=".DetailUserActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/img_profile_avatar"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        tools:layout_editor_absoluteX="111dp"
+        tools:layout_editor_absoluteY="35dp"
+        tools:src="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/tv_profile_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/item_name"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="165dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/item_username"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="192dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_company"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_company"
+        tools:layout_editor_absoluteX="111dp"
+        tools:layout_editor_absoluteY="232dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_location"
+        tools:layout_editor_absoluteX="192dp"
+        tools:layout_editor_absoluteY="232dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_repository_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/repository"
+        app:layout_constraintTop_toBottomOf="@+id/tv_profile_repository_value"
+        tools:layout_editor_absoluteX="36dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_repository_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_repository"
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_repository_text"
+        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_repository_text"
+        tools:layout_editor_absoluteY="303dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_follower_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/follower"
+        tools:layout_editor_absoluteX="124dp"
+        tools:layout_editor_absoluteY="338dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_follower_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_follower"
+        tools:layout_editor_absoluteX="142dp"
+        tools:layout_editor_absoluteY="303dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_following_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/following"
+        tools:layout_editor_absoluteX="237dp"
+        tools:layout_editor_absoluteY="338dp" />
+
+    <TextView
+        android:id="@+id/tv_profile_following_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/placeholder_following"
+        tools:layout_editor_absoluteX="255dp"
+        tools:layout_editor_absoluteY="311dp" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
