--- a/app/src/main/res/layout/activity_detail_user.xml
+++ b/app/src/main/res/layout/activity_detail_user.xml
@@ -10,92 +10,119 @@
         android:id="@+id/img_profile_avatar"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="35dp"
+        android:layout_marginTop="44dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/tv_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:text="@string/item_name"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="165dp" />
+        app:layout_constraintEnd_toEndOf="@+id/img_profile_avatar"
+        app:layout_constraintHorizontal_bias="0.54"
+        app:layout_constraintStart_toStartOf="@+id/img_profile_avatar"
+        app:layout_constraintTop_toBottomOf="@+id/img_profile_avatar" />
 
     <TextView
         android:id="@+id/tv_profile_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/item_username"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="192dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_name"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_name"
+        app:layout_constraintTop_toBottomOf="@+id/tv_profile_name" />
 
     <TextView
         android:id="@+id/tv_profile_company"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="@string/placeholder_company"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="232dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_username"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_username"
+        app:layout_constraintTop_toBottomOf="@+id/tv_profile_username" />
 
     <TextView
         android:id="@+id/tv_profile_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/placeholder_location"
-        tools:layout_editor_absoluteX="192dp"
-        tools:layout_editor_absoluteY="232dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_company"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_company"
+        app:layout_constraintTop_toTopOf="@+id/tv_profile_company" />
 
     <TextView
         android:id="@+id/tv_profile_repository_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/repository"
-        app:layout_constraintTop_toBottomOf="@+id/tv_profile_repository_value"
-        tools:layout_editor_absoluteX="36dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_repository_value"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_repository_value"
+        app:layout_constraintTop_toTopOf="@+id/tv_profile_follower_text" />
 
     <TextView
         android:id="@+id/tv_profile_repository_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/placeholder_repository"
-        app:layout_constraintEnd_toEndOf="@+id/tv_profile_repository_text"
-        app:layout_constraintHorizontal_bias="0.686"
-        app:layout_constraintStart_toStartOf="@+id/tv_profile_repository_text"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintEnd_toStartOf="@+id/tv_profile_follower_value"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_profile_follower_value" />
 
     <TextView
         android:id="@+id/tv_profile_follower_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/follower"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="338dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_follower_value"
+        app:layout_constraintHorizontal_bias="0.447"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_follower_value"
+        app:layout_constraintTop_toBottomOf="@+id/tv_profile_follower_value" />
 
     <TextView
         android:id="@+id/tv_profile_follower_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="@string/placeholder_follower"
-        tools:layout_editor_absoluteX="142dp"
-        tools:layout_editor_absoluteY="303dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_location"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_location"
+        app:layout_constraintTop_toBottomOf="@+id/tv_profile_location" />
 
     <TextView
         android:id="@+id/tv_profile_following_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/following"
-        tools:layout_editor_absoluteX="237dp"
-        tools:layout_editor_absoluteY="338dp" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_profile_following_value"
+        app:layout_constraintStart_toStartOf="@+id/tv_profile_following_value"
+        app:layout_constraintTop_toTopOf="@+id/tv_profile_follower_text" />
 
     <TextView
         android:id="@+id/tv_profile_following_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="76dp"
         android:text="@string/placeholder_following"
-        tools:layout_editor_absoluteX="255dp"
-        tools:layout_editor_absoluteY="311dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/tv_profile_follower_value"
+        app:layout_constraintTop_toTopOf="@+id/tv_profile_follower_value" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
