--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -18,23 +18,44 @@
         android:layout_toEndOf="@id/img_item_user"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tv_item_name"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/item_name" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_item_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/item_username"/>
+            <TextView
+                android:id="@+id/tv_item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:textSize="16sp"
+                tools:text="@string/item_name" />
+
+            <TextView
+                android:id="@+id/tv_item_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="@string/item_username" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_item_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:drawableStart="@drawable/ic_baseline_location_on_24"
+            android:drawablePadding="4dp"
             tools:text="@string/item_location" />
+
+        <TextView
+            android:id="@+id/tv_item_company"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:drawableStart="@drawable/ic_baseline_group_24"
+            android:drawablePadding="4dp"
+            android:text="@string/placeholder_company" />
 
     </LinearLayout>
 
